syntax = "proto2";

message PersonMetadata {
    optional string first_name = 1;
    optional string middle_name = 2;
    optional string last_name = 3;
    optional string about = 4;
    
    // index into external [assets array](#.Assets)
    optional uint32 cover_photo = 5;
    // index into external [assets array](#.Assets)
    optional uint32 avatar_photo = 6;
}
